--- a/STSEval/streaming/templates/streaming/camera.html
+++ b/STSEval/streaming/templates/streaming/camera.html
@@ -223,7 +223,7 @@
         Please visit <a href="https://cloud.wowza.com">cloud.wowza.com</a> to start your live stream.
         </div>
     </div>
-    <div class="row justify-content-center invisible mt-3" id="error-panel">
+    <div class="row justify-content-center invisible mt-3 col-10" id="error-panel">
         <div class="col-10 alert alert-danger alert-dismissible p-2">
         <button id="error-panel-close" type="button" class="close" aria-label="Close">
             <span aria-hidden="true">&times;</span>
