--- a/STSEval/management/templates/management/athlete_list_upload_form.html
+++ b/STSEval/management/templates/management/athlete_list_upload_form.html
@@ -4,6 +4,7 @@
     <div>You can upload a excel document (.xlsx) or CSV file to populate the athlete list.  The required fields are:<br/>Team Level Name Rotation<br/><br/>
     Team must match the name or abbreviation for a team you have entered.<br/>
     Level must match one of the available athlete levels (you can view these by clicking "Add" in the athlete section).<br/>
+    Age Group must match one of the available ages for the level you've selected (you can view these by clicking "Add" in the athlete section).<br/>
     This will override the current athletes for each team you upload.<br/><br/>
     <a href="{% static 'app/example_athlete_import.xlsx' %}">Click here to download a sample excel sheet</a>
     <br/><br/>
