--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -4,6 +4,14 @@
 <div align="center" style="margin:10px;padding:0">
     <h3>{{session.full_name}}</h3><br/>
     <div class="row no-gutters">
+         <div class="col-3 pr-4 pb-2" align="right">
+             <h2>Spectator URL</h2>
+        </div>
+        <div class="col-8 pt-2 pl-2 pb-2" align="left">
+            <span class="muted-text">This url will take spectators directly to the event and prompt them to purchase access if needed.</span><br/>
+            <span>www.stslivegym.com/comp/{{session.id}}/</span><br/>
+            <span style="font-size:.6rem"><a href="#" onclick="CopyURL('https://www.stslivegym.com/comp/{{session.id}}/')">Copy URL to Clipboard</a></span>
+        </div>
         <div class="col-3 pr-4 pb-2" align="right">
              <h2>Session Access Code</h2>
         </div>
@@ -110,6 +118,64 @@
             });
         }
     }
+
+    function CopyURL(text) {
+  var textArea = document.createElement("textarea");
+
+  //
+  // *** This styling is an extra step which is likely not required. ***
+  //
+  // Why is it here? To ensure:
+  // 1. the element is able to have focus and selection.
+  // 2. if the element was to flash render it has minimal visual impact.
+  // 3. less flakyness with selection and copying which **might** occur if
+  //    the textarea element is not visible.
+  //
+  // The likelihood is the element won't even render, not even a
+  // flash, so some of these are just precautions. However in
+  // Internet Explorer the element is visible whilst the popup
+  // box asking the user for permission for the web page to
+  // copy to the clipboard.
+  //
+
+  // Place in the top-left corner of screen regardless of scroll position.
+  textArea.style.position = 'fixed';
+  textArea.style.top = 0;
+  textArea.style.left = 0;
+
+  // Ensure it has a small width and height. Setting to 1px / 1em
+  // doesn't work as this gives a negative w/h on some browsers.
+  textArea.style.width = '2em';
+  textArea.style.height = '2em';
+
+  // We don't need padding, reducing the size if it does flash render.
+  textArea.style.padding = 0;
+
+  // Clean up any borders.
+  textArea.style.border = 'none';
+  textArea.style.outline = 'none';
+  textArea.style.boxShadow = 'none';
+
+  // Avoid flash of the white box if rendered for any reason.
+  textArea.style.background = 'transparent';
+
+
+  textArea.value = text;
+
+  document.body.appendChild(textArea);
+  textArea.focus();
+  textArea.select();
+
+  try {
+    var successful = document.execCommand('copy');
+    var msg = successful ? 'successful' : 'unsuccessful';
+    console.log('Copying text command was ' + msg);
+  } catch (err) {
+    console.log('Oops, unable to copy');
+  }
+
+  document.body.removeChild(textArea);
+}
    
 </script>
 {% endblock %}
