--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -9,8 +9,8 @@
         </div>
         <div class="col-8 pt-2 pl-2 pb-2" align="left">
             <span class="muted-text">This url will take spectators directly to the event and prompt them to purchase access if needed.</span><br/>
-            <span>www.stslivegym.com/comp/{{session.id}}/</span><br/>
-            <span style="font-size:.6rem"><a href="#" onclick="CopyURL('https://www.stslivegym.com/comp/{{session.id}}/')">Copy URL to Clipboard</a></span>
+            <span>stslivegym.com/comp/{{session.id}}/</span><br/>
+            <span style="font-size:.6rem"><a href="#" onclick="CopyURL('https://stslivegym.com/comp/{{session.id}}/')">Copy URL to Clipboard</a></span>
         </div>
         <div class="col-3 pr-4 pb-2" align="right">
              <h2>Session Access Code</h2>
